[package]
name = "break"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
notify-rust = "4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["macros", "formatting", "serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
